# LineSegmentation

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  LICENCE  README.md
experiments-python/: .gitignore  aggregate.py  analyze.py  analyze.sh  bm_it_evaluation.csv  bm_th_evaluation.csv  line_segment.py  run-apb-best.sh  run-apb-quality.sh  run-wireframe-analysis-quality.sh  run-wireframe-analysis-quantity.sh  run-wireframe-analysis.sh  run-wireframe-candidates-quality.sh  run-wireframe-candidates-quantity.sh  run-wireframe-clustering-quality.sh  run-wireframe-clustering-quantity.sh  run-yud-analysis-quality.sh  run-yud-analysis-quantity  run-yud-analysis-quantity.sh  run-yud-candidates-quality.sh  run-yud-candidates-quantity.sh  run-yud-clustering-quality.sh  run-yud-clustering-quantity.sh  run.sh  st_it_evaluation.csv  st_th_evaluation.csv
experiments-python/apb-analysis/: apb-good-aggregation.csv  apb-good-time.csv  time.csv
experiments-python/wireframe-analysis-quality/: aggregation.csv  bm_it_GA+KL_loose_clustering.csv  bm_it_GA_loose_clustering.csv  bm_it_KL_loose_clustering.csv  bm_it_MWS+KL_loose_clustering.csv  bm_it_MWS_loose_clustering.csv  bm_it_evaluation.csv  bm_it_loose_GA+KL_evaluation.csv  bm_it_loose_evaluation.csv  bm_it_moderate_GA+KL_evaluation.csv  bm_it_moderate_evaluation.csv  bm_it_strict_GA+KL_evaluation.csv  bm_it_strict_evaluation.csv  bm_th_evaluation.csv  bm_th_loose_GA+KL_evaluation.csv  bm_th_loose_evaluation.csv  bm_th_moderate_GA+KL_evaluation.csv  bm_th_moderate_evaluation.csv  (+24 more)
include/: best.hpp  cand_type.hpp  candidate.hpp  cgraph.hpp  cgraph_type.hpp  clustering.hpp  color.hpp  config.hpp  cost.hpp  directions.hpp  edge_type.hpp  gpu_params.hpp  iterative.hpp  kernels.hpp  line_type.hpp  lines.hpp  lsd.hpp  operations.hpp  resize.hpp  score.hpp  show.hpp  types.hpp  vec_type.hpp  working_state.hpp
src/: best.cu  cand_type.cu  candidate.cu  cgraph.cu  cgraph_type.cu  clustering.cu  color.cu  cost.cu  directions.cu  edge_type.cu  iterative.cu  kernels.cu  line_type.cu  lines.cu  lsd.cu  main.cpp  main.cu  operations.cu  resize.cu  score.cu  show.cu  types.cu  vec_type.cu  working_state.cu
(+98 files in other folders)
